--- a/config/storage.yml
+++ b/config/storage.yml
@@ -22,13 +22,13 @@ google:
     type: "service_account"
     project_id: <%= Rails.application.credentials.dig(:gcs, :project_id) %>
     private_key_id: <%= Rails.application.credentials.dig(:gcs, :private_key_id) %>
+    private_key: "<%= Rails.application.credentials.dig(:gcs, :private_key).gsub("\n", '\n') %>"
     client_email: <%= Rails.application.credentials.dig(:gcs, :client_email) %>
     client_id: <%= Rails.application.credentials.dig(:gcs, :client_id) %>
     auth_uri: "https://accounts.google.com/o/oauth2/auth"
     token_uri: "https://accounts.google.com/o/oauth2/token"
     auth_provider_x509_cert_url: "https://www.googleapis.com/oauth2/v1/certs"
     client_x509_cert_url: <%= Rails.application.credentials.dig(:gcs, :client_x509_cert_url) %>
-    private_key: <%= Rails.application.credentials.dig(:gcs, :private_key) %>
   bucket: <%= Rails.application.credentials.dig(:gcs, :bucket) %>
 
 # Use rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
