--- a/config/storage.yml
+++ b/config/storage.yml
@@ -22,7 +22,7 @@ google:
     type: "service_account"
     project_id: <%= Rails.application.credentials.dig(:gcs, :project_id) %>
     private_key_id: <%= Rails.application.credentials.dig(:gcs, :private_key_id) %>
-    private_key: "<%= Rails.application.credentials.dig(:gcs, :private_key).gsub("\n", '\n') %>"
+    private_key: "<%= Rails.application.credentials.dig(:gcs, :private_key)&.gsub("\n", '\n') %>"
     client_email: <%= Rails.application.credentials.dig(:gcs, :client_email) %>
     client_id: <%= Rails.application.credentials.dig(:gcs, :client_id) %>
     auth_uri: "https://accounts.google.com/o/oauth2/auth"
