Add service to GCS

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -30,3 +30,9 @@ test:
 
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  digital_ocean:
+    access_key_id: <%= ENV['DO_ACCESS_KEY_ID'] %>
+    secret_access_key: <%= ENV['DO_SECRET_ACCESS_KEY'] %>
+    bucket: <%= ENV['DO_BUCKET'] %>
+    endpoint: <%= ENV['DO_ENDPOINT'] %>
+    region: unused
